@@ -6449,3 +6449,10 @@ Minor changes:
 
 ------------------------------------------------------------------------
 r674 | dahnke | 2015-02-24 15:59:35
+
+M       CHANGES.txt
+M       cg_vbm_write.m
+
+(1)  Corrected "debug==0" error in "vbm_pre_LAS2" in "cg_vbm_write".
+------------------------------------------------------------------------
+r675 | dahnke | 2015-02-26 09:58:00
